// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render column with ascending sort icon 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Title
              <span
                aria-label="su-angle-up"
                class="su-angle-up headerCellSortIcon"
              />
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Title 1"
              >
                Title 1
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        disabled=""
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render column with descending sort icon 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Title
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
              <span
                aria-label="su-angle-down"
                class="su-angle-down headerCellSortIcon"
              />
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Title 1"
              >
                Title 1
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        disabled=""
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with all different visibility types schema 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Test 1
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            />
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 2"
              >
                Description 2
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            />
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with pencil button and given itemActions when onItemEdit callback is passed 1`] = `
<section>
  <div
    class="tableContainer dark hasButtons"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerButtonCell headerCell"
          >
            <span>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </span>
          </th>
          <th
            class="headerButtonCell headerCell"
          >
            <span>
              <span
                aria-label="su-process"
                class="su-process"
              />
            </span>
          </th>
          <th
            class="headerButtonCell headerCell"
          >
            <span>
              <span
                aria-label="su-trash"
                class="su-trash"
              />
            </span>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-pen"
                  class="su-pen"
                />
              </button>
            </div>
          </td>
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-process"
                  class="su-process"
                />
              </button>
            </div>
          </td>
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-trash"
                  class="su-trash"
                />
              </button>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-pen"
                  class="su-pen"
                />
              </button>
            </div>
          </td>
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-process"
                  class="su-process"
                />
              </button>
            </div>
          </td>
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-trash"
                  class="su-trash"
                />
              </button>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 2"
              >
                Description 2
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        disabled=""
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with pencil button when onItemEdit callback is passed 1`] = `
<section>
  <div
    class="tableContainer dark hasButtons"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerButtonCell headerCell"
          >
            <span>
              <span
                aria-label="su-pen"
                class="su-pen"
              />
            </span>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-pen"
                  class="su-pen"
                />
              </button>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="buttonCell cell"
          >
            <div
              class="cellContent"
            >
              <button
                type="button"
              >
                <span
                  aria-label="su-pen"
                  class="su-pen"
                />
              </button>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 2"
              >
                Description 2
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        disabled=""
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with schema 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Title
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Page 1"
              >
                Page 1
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Page 2"
              >
                Page 2
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <div
                class="publishIndicator publishIndicator"
              >
                <span
                  class="published"
                />
                <span
                  class="draft"
                />
              </div>
              <span
                class="textBox"
                title="Page 3"
              >
                Page 3
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <div
                class="publishIndicator publishIndicator"
              >
                <span
                  class="draft"
                />
              </div>
              <span
                class="textBox"
                title="Page 4"
              >
                Page 4
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="ghostIndicator ghostIndicator"
              >
                de
              </span>
              <span
                class="textBox"
                title="Page 5"
              >
                Page 5
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="ghostIndicator ghostIndicator"
              >
                de
              </span>
              <span
                class="textBox"
                title="Page 6"
              >
                Page 6
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="ghostIndicator ghostIndicator"
              >
                de
              </span>
              <span
                class="textBox"
                title="Page 7"
              >
                Page 7
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="ghostIndicator ghostIndicator"
              >
                de
              </span>
              <span
                class="textBox"
                title="Page 8"
              >
                Page 8
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with schema and selections 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell"
          >
            <span>
              <label
                class="label"
                tabindex="-1"
              >
                <span
                  class="switch checkbox light"
                >
                  <input
                    type="checkbox"
                  />
                  <span />
                </span>
              </label>
            </span>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <label
                class="label"
                tabindex="-1"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    checked=""
                    type="checkbox"
                    value="1"
                  />
                  <span>
                    <span
                      aria-label="su-check"
                      class="su-check"
                    />
                  </span>
                </span>
              </label>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <label
                class="label"
                tabindex="-1"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    type="checkbox"
                    value="2"
                  />
                  <span />
                </span>
              </label>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 2"
              >
                Description 2
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <label
                class="label"
                tabindex="-1"
              >
                <span
                  class="switch checkbox dark"
                >
                  <input
                    checked=""
                    type="checkbox"
                    value="3"
                  />
                  <span>
                    <span
                      aria-label="su-check"
                      class="su-check"
                    />
                  </span>
                </span>
              </label>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 3"
              >
                Description 3
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        disabled=""
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with schema in different order 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 1"
              >
                Description 1
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="Description 2"
              >
                Description 2
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with schema not containing all fields 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr />
      </thead>
      <tbody>
        <tr
          class="row"
        />
        <tr
          class="row"
        />
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 3
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        disabled=""
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with shrunken cell 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable shrink"
          >
            <button
              type="button"
            >
              Title
            </button>
          </th>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="1"
              >
                1
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="planned"
              >
                planned
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="2"
              >
                2
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="running"
              >
                running
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="3"
              >
                3
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="succeeded"
              >
                succeeded
              </span>
            </div>
          </td>
        </tr>
        <tr
          class="row"
        >
          <td
            class="cell shrink"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="4"
              >
                4
              </span>
            </div>
          </td>
          <td
            class="cell"
          >
            <div
              class="cellContent"
            >
              <span
                class="textBox"
                title="failed"
              >
                failed
              </span>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data with skin 1`] = `
<section>
  <div
    class="tableContainer light"
  >
    <table
      class="table"
    >
      <thead
        class="header"
      >
        <tr>
          <th
            class="headerCell clickable"
          >
            <button
              type="button"
            >
              Description
            </button>
          </th>
        </tr>
      </thead>
      <tbody />
    </table>
    <div
      class="tablePlaceholderArea"
    >
      <span
        aria-label="su-battery-low"
        class="su-battery-low tablePlaceholderIcon"
      />
    </div>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;

exports[`Render data without header 1`] = `
<section>
  <div
    class="tableContainer dark"
  >
    <table
      class="table"
    >
      <tbody />
    </table>
    <div
      class="tablePlaceholderArea"
    >
      <span
        aria-label="su-battery-low"
        class="su-battery-low tablePlaceholderIcon"
      />
    </div>
  </div>
  <nav
    class="pagination"
  >
    <span
      class="display"
    >
      :
    </span>
    <span>
      <div
        class="select"
        role="none"
      >
        <button
          class="displayValue dark"
          type="button"
        >
          <div
            aria-label="10"
            class="croppedText"
            title="10"
          >
            <div
              aria-hidden="true"
              class="front"
            >
              1
            </div>
            <div
              aria-hidden="true"
              class="back"
            >
              <span>
                0
              </span>
            </div>
            <div
              class="whole"
            >
              10
            </div>
          </div>
          <span
            aria-label="su-angle-down"
            class="su-angle-down toggle"
          />
        </button>
      </div>
    </span>
    <div
      class="loader"
    />
    <span>
      Page:
    </span>
    <span
      class="inputContainer"
    >
      <div
        class="input dark center"
      >
        <input
          inputmode="numeric"
          type="text"
          value="1"
        />
      </div>
    </span>
    <span
      class="display"
    >
      of 5
    </span>
    <div
      class="buttonGroup"
    >
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-left"
          class="su-angle-left buttonIcon"
        />
      </button>
      <button
        class="button icon button"
        type="button"
      >
        <span
          aria-label="su-angle-right"
          class="su-angle-right buttonIcon"
        />
      </button>
    </div>
  </nav>
</section>
`;
